JFR crash: assert(((((JfrTraceIdBits::load(klass)) & ((JfrTraceIdEpoch::this_epoch_method_and_class_bits()))) != 0))) failed: invariant

XMLWordPrintable

    • jfr
    • b07

        Test: applications/runthese/RunThese8H.java

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/a4a7850a-7c35-410a-b879-d77fbb2f6087-S12578/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/d0354406-c0ff-476e-8d2f-031519669c48/runs/4e171abe-b62c-430d-abf3-72ffa822a04b/workspace/open/src/hotspot/share/jfr/recorder/checkpoint/types/traceid/jfrTraceIdLoadBarrier.inline.hpp:160), pid=3544059, tid=3544107
        # assert(((((JfrTraceIdBits::load(klass)) & ((JfrTraceIdEpoch::this_epoch_method_and_class_bits()))) != 0))) failed: invariant
        #
        # JRE version: Java(TM) SE Runtime Environment (24.0+4) (fastdebug build 24-ea+4-288)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 24-ea+4-288, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1460ec6] ObjectSampleCheckpoint::add_to_leakp_set(InstanceKlass const*, unsigned long)+0x546
        #

        Seems to be a recurring failure mode over the years - lots of similar issues fixed in the past.

              Assignee:
              Markus Grönlund
              Reporter:
              David Holmes
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: